--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
                 display: inline-grid;
                 grid-template-columns: auto auto auto;
                 background-color: #5921f3;
-                padding: 30px;
+                padding: 2vmin;
                 aspect-ratio: 1/1;
-                max-width: 50vw;
-                max-height: 50vh;
+                max-width: 50vmin;
+                max-height: 50vmin;
                 flex: auto;
+                font-size: 10vmin;
             }
             
             .grid-item {
@@ -21,9 +22,6 @@
                 align-items: center;
                 justify-content: center;
                 cursor: move;
-                min-width: 30px;
-                min-height: 30px;
-                font-size: 30px;
             }
 
             .centered {
@@ -61,7 +59,7 @@
 
         </div>
         <div class="centered">
-            <button style="padding: 5%; font-size: 30px" onclick="solvePuzzleForFunzies(htmlMatrix, goal_state)" class="centered">Solve me!</button>
+            <button style="padding: 5vmin; font-size: 10vmin" onclick="solvePuzzleForFunzies(htmlMatrix, goal_state)" class="centered">Solve me!</button>
         </div>
         
 
