Add shuffle puzzle button

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
         </div>
         <div class="centered">
+            <button style="padding: 5vmin; font-size: 10vmin" onclick="shuffleHtmlMatrix()" class="centered">Shuffle</button>
             <button style="padding: 5vmin; font-size: 10vmin" onclick="solvePuzzleForFunzies(htmlMatrix, goal_state)" class="centered">Solve me!</button>
         </div>
         
