Add basic runtime and memory output to page

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
                 <option value="BFS">Breadth-First Search</option>
               </select>
         </div>
+
+        <div class="centered">
+            <p id="output"></p>
+        </div>
+
         
 
         
