Multiple js files, add cool test image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             }
             
             .grid-item {
-                background-image: url('test.png');
+                background-image: url('test.jpg');
                 border: 1px solid rgba(0, 0, 0, 0.8);
                 display: flex;
                 flex: auto;
@@ -97,7 +97,9 @@
             <p id="output"></p>
         </div>
 
-        <script src="driver.js"></script>
+        <script src="driver.js" defer></script>
+        <script src="Puzzle.js" defer></script>
+        <script src="PriorityQueue.js" defer></script>
     </body>
 </html>
 
