--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
                 display: grid;
                 grid-auto-columns: 1fr;
                 grid-auto-rows: 1fr;
-                grid-template-columns: 1fr 1fr 1fr;
-                grid-template-rows: 1fr 1fr 1fr;
                 aspect-ratio: 1/1;
-                max-width: 50vmin;
-                max-height: 50vmin;
+                max-width: 60vmin;
+                max-height: 60vmin;
                 flex: auto;
-                font-size: 5vmin;
             }
-            
+
             .grid-item {
                 background-image: url('test.jpg');
+                background-size: inherit;
                 border: 1px solid rgba(0, 0, 0, 0.8);
                 display: flex;
                 flex: auto;
@@ -43,7 +41,26 @@
             }
 
             .flexy {
+                font-size: 4vmin;
+            }
+
+            .buttons {
                 font-size: 5vmin;
+                padding: 3vmin;
+            }
+
+            .dimensionInputs {
+                width: 8vmin;
+            }
+
+            /* Lets you see the up/down arrows for dimension inputs at least on chrome */
+            input[type=number]::-webkit-inner-spin-button, 
+            input[type=number]::-webkit-outer-spin-button {  
+                -webkit-appearance: textfield;
+                -moz-appearance: textfield;
+                appearance: textfield;
+                opacity: 1;
+
             }
 
             /* to make the page fill the entire screen */
@@ -67,39 +84,44 @@
     <body>
         <div class="centered">
             <div id="gridContainer" class="grid-container">
-                <div draggable="true" class="grid-item row0 col0" id="1">1</div>
-                <div draggable="true" class="grid-item row0 col1" id="2">2</div>
-                <div draggable="true" class="grid-item row0 col2" id="3">3</div>
-                <div draggable="true" class="grid-item row1 col0" id="4">4</div>
-                <div draggable="true" class="grid-item row1 col1" id="5">5</div>
-                <div draggable="true" class="grid-item row1 col2" id="6">6</div>
-                <div draggable="true" class="grid-item row2 col0" id="7">7</div>
-                <div draggable="true" class="grid-item row2 col1" id="8">8</div>
-                <div draggable="true" class="grid-item row2 col2" id="0"> </div>
             </div>
         </div>
         <div class="centered">
-            <button id="shuffleButton" style="padding: 5vmin; font-size: 10vmin" onclick="shuffleHtmlMatrix()">Shuffle</button>
-            <button id="playButton" style="padding: 5vmin; font-size: 8vmin" onclick="togglePlayMode()">Play puzzle</button>
-            <button id="solveButton" style="padding: 5vmin; font-size: 8vmin" onclick="solvePuzzleForFunzies(htmlMatrix, goal_state)">Solve me!</button>
+            <button id="shuffleButton" class="buttons" onclick="shuffleHtmlMatrix()">Shuffle</button>
+            <button id="playButton" class="buttons" onclick="togglePlayMode()">Play puzzle</button>
+            <button id="solveButton" class="buttons" onclick="solvePuzzleForFunzies(htmlMatrix)">Solve me!</button>
+        </div>
+
+        <div class="centered">
+            <label class="flexy" for="rowInput">Rows:</label>
+            <input id="rowInput" type="number" class="flexy dimensionInputs" value="3"></input>
+            <label class="flexy" for="colInput">Columns:</label>
+            <input id="colInput" type="number" class="flexy dimensionInputs" value="3"></input>
+            </select>
         </div>
 
         <div class="centered">
             <label class="flexy" for="algorithms">Choose a search algorithm:</label>
             <select class="flexy" name="algorithms" id="algorithmsDropdown">
+                <option value="Strategic">Strategically</option>
                 <option value="IDA*">Iterative Deepening A*</option>
                 <option value="A*">A* (with closed set)</option>
                 <option value="BFS">Breadth-First Search</option>
               </select>
         </div>
 
-        <div class="centered">
+
+
+        <div class="centered flexy">
             <p id="output"></p>
         </div>
 
+        <script src="strategicSolve.js" defer></script>
         <script src="driver.js" defer></script>
         <script src="Puzzle.js" defer></script>
         <script src="PriorityQueue.js" defer></script>
+        <script src="searchAlgorithms.js" defer></script>
+        <script src="uiUtils.js" defer></script>
     </body>
 </html>
 
