--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
                 /* Some sort of CSS Magic to keep child grid centered */
                 margin: -1px auto 0 auto; 
                 padding: 1px 0 0 0;
-                margin-top: 5vh;
 
                 max-width: 60vmin;
                 max-height: 60vmin;
@@ -48,6 +47,11 @@
                 justify-content: center;
             }
 
+            .break {
+                flex-basis: 100%;
+                height: 0;
+            }
+
             .inputs {
                 font-size: 4vmin;
             }
@@ -58,9 +62,53 @@
                 padding: 3vmin;
             }
 
+            .test {
+                
+            }
+            .dimensionInputContainer {
+                /* Keep things centered and a little to the left since we justify flex-end */
+                width: 50vmin;
+                margin-right: 5vmin;
+                display: inline-flex;
+                align-items: center;
+                
+                /* Line up the sliders with each other */
+                justify-content: flex-end;
+            }
             .dimensionInputs {
                 width: 8vmin;
             }
+
+            .slider {
+                -webkit-appearance: none;
+                width: 25vmin;
+                height: 10px;
+                border-radius: 5px;  
+                background: #d3d3d3;
+                outline: none;
+                opacity: 0.7;
+                -webkit-transition: .2s;
+                transition: opacity .2s;
+            }
+
+            .slider::-webkit-slider-thumb {
+                -webkit-appearance: none;
+                appearance: none;
+                width: 4vmin;
+                height: 4vmin;
+                border-radius: 50%; 
+                background: rgb(0, 81, 255);
+                cursor: pointer;
+            }
+
+            .slider::-moz-range-thumb {
+                width: 3vmin;
+                height: 3vmin;
+                border-radius: 50%;
+                background: rgb(0, 81, 255);
+                cursor: pointer;
+            }
+
 
             /* Lets you see the up/down arrows for dimension inputs at least on chrome */
             input[type=number]::-webkit-inner-spin-button, 
@@ -84,7 +132,9 @@
             }
 
             .outputAreaContainer {
+                padding-top: 10vmin;
                 height: 10vh;
+                justify-content: left;
             }
 
             .outputArea {
@@ -93,7 +143,7 @@
                 font:3vmin Arial;
                 overflow:auto;
 
-                text-align:center;
+                text-align: left;
 
                 border: none;
                 background-color: transparent;
@@ -119,12 +169,21 @@
             <button id="solveButton" class="buttons" onclick="solvePuzzleForFunzies(htmlMatrix)">Solve me!</button>
         </div>
         <div class="centered">
-            <label class="inputs" for="rowInput">Rows:</label>
-            <input id="rowInput" type="number" class="inputs dimensionInputs" value="3"></input>
-            <label class="inputs" for="colInput">Columns:</label>
-            <input id="colInput" type="number" class="inputs dimensionInputs" value="3"></input>
-            </select>
+            <div class ="dimensionInputContainer">
+                <label class="inputs" for="rowInput">Rows:</label>
+                <input id="rowInput" type="number" class="inputs dimensionInputs" value="3"></input>
+                <input type="range" min="2" max="50" value="3" class="slider" id="rowSlider">
+            </div>
         </div>
+
+        <div class="centered">
+            <div class ="dimensionInputContainer">
+                <label class="inputs" for="colInput">Columns:</label>
+                <input id="colInput" type="number" class="inputs dimensionInputs" value="3"></input>
+                <input type="range" min="2" max="50" value="3" class="slider" id="colSlider">
+            </div>
+        </div>
+
 
         <div class="centered">
             <label class="inputs" for="algorithms">Algorithm:</label>
@@ -137,8 +196,8 @@
         </div>
 
         <div class="centered outputAreaContainer"">
-            <textarea readonly='yes' class="centered flexy outputArea" id="outputSummary"></textarea>
-            <textarea readonly='yes' class="centered flexy outputArea" id="outputMoves"></textarea>
+            <textarea readonly='yes' class="outputArea" id="outputSummary"></textarea>
+            <textarea readonly='yes' class="outputArea" id="outputMoves"></textarea>
         </div>
 
         <script src="strategicSolve.js" defer></script>
