--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             .dimensionInputContainer {
                 /* Keep things centered and a little to the left since we justify flex-end */
                 font-family: "Fira Mono", monospace;
-                width: 50vmin;
-                margin-right: 5vmin;
+                width: 60vmin;
                 display: inline-flex;
                 align-items: center;
                 
@@ -81,7 +80,7 @@
 
             .slider {
                 -webkit-appearance: none;
-                width: 25vmin;
+                width: 100%;
                 height: 10px;
                 border-radius: 5px;  
                 background: #d3d3d3;
@@ -102,8 +101,8 @@
             }
 
             .slider::-moz-range-thumb {
-                width: 3vmin;
-                height: 3vmin;
+                width: 4vmin;
+                height: 4vmin;
                 border-radius: 50%;
                 background: rgb(0, 81, 255);
                 cursor: pointer;
