--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <style>
 
             .title {
-                font-size: 6vmin;
-                margin-top: 2.5vmin;
+                font-size: 5vmin;
+                margin-top: 1vh;
             }
 
             .gridContainer {
@@ -15,7 +15,7 @@
                 margin: -1px auto 0 auto; 
                 padding: 1px 0 0 0;
 
-                margin-top: 2.5vmin;
+                margin-top: 1vh;
 
                 max-width: 60vmin;
                 max-height: 60vmin;
@@ -69,8 +69,8 @@
             
             .buttons {
                 font-size: 5vmin;
-                padding: 2vmin;
-                margin:1vmin 1vmin 1vmin 1vmin;
+                padding: 1.5vmin;
+                margin:1vh 1vh 1vw 1vw;
                 border-radius:0.30em;
                 box-sizing: border-box;
                 background-color:#CCCCCC;
@@ -93,6 +93,9 @@
                 
                 /* Line up the sliders with each other */
                 justify-content: flex-end;
+
+                margin-bottom: 3vmin;
+
             }
 
             .numberInput {
@@ -102,7 +105,7 @@
             .slider {
                 -webkit-appearance: none;
                 width: 100%;
-                height: 10px;
+                height: 2vmin;
                 border-radius: 5px;  
                 background: #d3d3d3;
                 outline: none;
@@ -114,16 +117,16 @@
             .slider::-webkit-slider-thumb {
                 -webkit-appearance: none;
                 appearance: none;
-                width: 4vmin;
-                height: 4vmin;
+                width: 6vmin;
+                height: 6vmin;
                 border-radius: 50%; 
                 background: rgb(0, 81, 255);
                 cursor: pointer;
             }
 
             .slider::-moz-range-thumb {
-                width: 4vmin;
-                height: 4vmin;
+                width: 6vmin;
+                height: 6vmin;
                 border-radius: 50%;
                 background: rgb(0, 81, 255);
                 cursor: pointer;
@@ -196,14 +199,14 @@
                     <div class ="dimensionInput">
                         <label class="inputs" for="rowInput">Rows:</label>
                         <input id="rowInput" type="number" class="inputs numberInput" value="3"></input>
-                        <input type="range" min="2" max="50" value="3" class="slider" id="rowSlider">
+                        <input type="range" min="2" max="25" value="3" class="slider" id="rowSlider">
                     </div>
                 </div>
                 <div class="centered">
                     <div class ="dimensionInput">
                         <label class="inputs" for="colInput">Cols:</label>
                         <input id="colInput" type="number" class="inputs numberInput" value="3"></input>
-                        <input type="range" min="2" max="50" value="3" class="slider" id="colSlider">
+                        <input type="range" min="2" max="25" value="3" class="slider" id="colSlider">
                     </div>
                 </div>
             </div>
