--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
                 font-size: 4vmin;
             }
 
+            .editInputWrapper {
+                flex-wrap: wrap;
+            }
+
 
             
             .buttons {
@@ -105,6 +109,10 @@
                 width: 8vmin;
             }
 
+            .customImageInput {
+                flex-basis: 100%;
+            }
+
             .slider {
                 -webkit-appearance: none;
                 width: 100%;
@@ -115,6 +123,7 @@
                 opacity: 0.7;
                 -webkit-transition: .2s;
                 transition: opacity .2s;
+                flex-basis: 100%;
             }
 
             .slider::-webkit-slider-thumb {
@@ -209,30 +218,27 @@
         </div>
 
         <div id="dimensionInputContainer"">
-            <div id="editInputWrapper">
-                <div class="centered">
-                    <div class ="dimensionInput">
-                        <label class="inputs" for="rowInput">Rows:</label>
-                        <input id="rowInput" type="number" class="inputs numberInput" value="3"></input>
-                        <input type="range" min="2" max="25" value="3" class="slider" id="rowSlider">
-                    </div>
+            <div id="editInputWrapper" class="centered editInputWrapper">
+                <div class ="dimensionInput">
+                    <label class="inputs" for="rowInput">Rows:</label>
+                    <input id="rowInput" type="number" class="inputs numberInput" value="3"></input>
+                    <input type="range" min="2" max="25" value="3" class="slider" id="rowSlider">
                 </div>
-                <div class="centered">
-                    <div class ="dimensionInput">
-                        <label class="inputs" for="colInput">Cols:</label>
-                        <input id="colInput" type="number" class="inputs numberInput" value="3"></input>
-                        <input type="range" min="2" max="25" value="3" class="slider" id="colSlider">
-                    </div>
+                <div class ="dimensionInput">
+                    <label class="inputs" for="colInput">Cols:</label>
+                    <input id="colInput" type="number" class="inputs numberInput" value="3"></input>
+                    <input type="range" min="2" max="25" value="3" class="slider" id="colSlider">
+                </div>
+                <div id="customImageInput" class="centered inputs customImageInput">
+                    <label for="imageInputURL">Image URL:</label>
+                    <input type="url" id="imageInputURL" name="imageInputURL" onchange="handleImageURL()"></input>
+                    <input type="file" id="imageUpload" style="display: none;" onchange="handleImageUpload()"></input>
+                    <input type="button" value="Browse" onclick="document.getElementById('imageUpload').click();" />
                 </div>
             </div>
         </div>
 
-        <div id="customImageInput" class="centered inputs">
-            <label for="imageInputURL">Image URL:</label>
-            <input type="url" id="imageInputURL" name="imageInputURL" onchange="handleImageURL()"></input>
-            <input type="file" id="imageUpload" style="display: none;" onchange="handleImageUpload()"></input>
-            <input type="button" value="Browse" onclick="document.getElementById('imageUpload').click();" />
-        </div>
+
         
 
         <div class="centered">
@@ -245,10 +251,7 @@
               </select>
         </div>
 
-        <div class="centered outputAreaContainer" id="outputAreaContainer" style="visibility: hidden;">
-            <textarea readonly='yes' class="outputArea summaryOutput" id="outputSummary"></textarea>
-            <textarea readonly='yes' class="outputArea moveOutput" id="outputMoves"></textarea>
-        </div>
+        <div id="outputAreaContainer" style="width: 100%; height: 100%;"></div>
 
         <script src="strategicSolve.js" defer></script>
         <script src="driver.js" defer></script>
