don't repeat background, optimizing external images.  TODO: use canvas' instead..

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             }
 
             .grid-item {
+                /* Make background same size as the grid container, and don't repeat the image */
                 background-size: inherit;
+                background-repeat: no-repeat;
+                
                 border: 1px solid rgba(0, 0, 0, 0.8);
                 display: flex;
                 flex: auto;
