Add reset and randomize buttons

--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@
         </div>
         <div class="centered">
             <button id="shuffleButton" class="buttons" onclick="shuffleHtmlMatrix()">Shuffle</button>
+            <button id="resetButton" class="buttons" onclick="resetPuzzle()">Reset</button>
+            <button id="randomizeButton" class="buttons" onclick="randomizePuzzle()">Randomize</button>
+        </div>
+
+        <div class="centered">
             <button id="playButton" class="buttons" onclick="togglePlayMode()">Play Puzzle</button>
             <button id="solveButton" class="buttons" onclick="solvePuzzleForFunzies(htmlMatrix)">Solve me!</button>
         </div>
