--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
                 height: 2vmin;
                 border-radius: 5px;  
                 background: #d3d3d3;
-                outline: none;
                 opacity: 0.7;
                 -webkit-transition: .2s;
                 transition: opacity .2s;
@@ -153,6 +152,11 @@
                 border-radius: 50%;
                 background: rgb(0, 81, 255);
                 cursor: pointer;
+            }
+
+            input[type=range]:focus {
+                opacity: 1;
+                background: #c7c7c7;
             }
 
 
