Puzzle rotate & flip horizontal/vertical buttons

--- a/index.html
+++ b/index.html
@@ -253,10 +253,16 @@
             <button id="resetButton" class="buttons buttonsRow1" onclick="resetPuzzle()">Reset</button>
             <button id="randomizeButton" class="buttons buttonsRow1" onclick="randomizePuzzle()">Randomize</button>
         </div>
-
+        
         <div class="centered">
             <button id="playButton" class="buttons buttonsRow2" onclick="togglePlayMode()">Play Puzzle</button>
             <button id="playButton" class="buttons buttonsRow2" onclick="alert('coming soon!')">Edit Goal</button>
+        </div>
+
+        <div class="centered">
+            <button id="flipHorizontally" class="buttons buttonsRow2" onclick="flipPuzzleHorizontally()">Flip horizontally</button>
+            <button id="flipVertically" class="buttons buttonsRow2" onclick="flipPuzzleVertically()">Flip vertically</button>
+            <button id="flipVertically" class="buttons buttonsRow2" onclick="rotatePuzzle()">Rotate Puzzle</button>
         </div>
 
         <div class="centered">
