Add toggles for tile numbers and borders

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 background-size: inherit;
                 background-repeat: no-repeat;
                 
-                border: 1px solid rgba(0, 0, 0, 0.8);
                 display: flex;
                 flex: auto;
                 text-align: center;
@@ -298,6 +297,11 @@
                 <button id="flipHorizontally" class="buttons buttonsRow2" onclick="flipPuzzleHorizontally()">Flip horizontally</button>
                 <button id="flipVertically" class="buttons buttonsRow2" onclick="flipPuzzleVertically()">Flip vertically</button>
                 <button id="flipVertically" class="buttons buttonsRow2" onclick="rotatePuzzle()">Rotate Puzzle</button>
+            </div>
+
+            <div class="centered">
+                <button id="toggleBorders" class="buttons buttonsRow1" onclick="toggleBorders()">Toggle Borders</button>
+                <button id="toggleNumbers" class="buttons buttonsRow1" onclick="toggleNumbers()">Toggle Numbers</button>
             </div>
         </div>
 
