Use flip/rotate on randomize for nice visuals

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <div id="grid" class="grid"></div>
         </div>
         <div class="centered">
-            <button id="shuffleButton" class="buttons fontButtons buttonsRow1" onclick="shuffleHtmlMatrix()">Shuffle</button>
+            <button id="shuffleButton" class="buttons fontButtons buttonsRow1" onclick="shufflePuzzle()">Shuffle</button>
             <button id="resetButton" class="buttons fontButtons buttonsRow1" onclick="resetPuzzle()">Reset</button>
             <button id="randomizeButton" class="buttons fontButtons buttonsRow1" onclick="randomizePuzzle()">Randomize</button>
         </div>
