--- a/index.html
+++ b/index.html
@@ -44,12 +44,43 @@
         <div id="editInputsContainer" class="editInputsContainer">
             <div>
 
-
                 <div class="editTitle" >Customize Puzzle:</div>
 
                 <div style="display: flex; align-items: center; justify-content: center; flex-basis: 100%;">
-                    <button id="toggleBorders" class="buttons fontButtons buttonsRow1" onclick="toggleBorders()">Borders</button>
-                    <button id="toggleNumbers" class="buttons fontButtons buttonsRow1" onclick="toggleNumbers()">Numbers</button>
+                    <button id="toggleBorders" class="buttons svgButtons buttonsRow1" onclick="toggleBorders()">
+                        <svg id="hideBorderSvg" viewBox="0 0 16 16">
+                            <path d="M0 0h.969v.5H1v.469H.969V1H.5V.969H0V0zm2.844 1h-.938V0h.938v1zm1.875 0H3.78V0h.938v1zm1.875 0h-.938V0h.938v1zm.937 0V.969H7.5V.5h.031V0h.938v.5H8.5v.469h-.031V1H7.53zm2.813
+                            0h-.938V0h.938v1zm1.875 0h-.938V0h.938v1zm1.875 0h-.938V0h.938v1zM15.5 1h-.469V.969H15V.5h.031V0H16v.969h-.5V1zM1 1.906v.938H0v-.938h1zm6.5.938v-.938h1v.938h-1zm7.5 0v-.938h1v.938h-1zM1
+                            3.78v.938H0V3.78h1zm6.5.938V3.78h1v.938h-1zm7.5 0V3.78h1v.938h-1zM1 5.656v.938H0v-.938h1zm6.5.938v-.938h1v.938h-1zm7.5 0v-.938h1v.938h-1zM.969
+                            8.5H.5v-.031H0V7.53h.5V7.5h.469v.031H1v.938H.969V8.5zm1.875 0h-.938v-1h.938v1zm1.875 0H3.78v-1h.938v1zm1.875
+                            0h-.938v-1h.938v1zm1.875-.031V8.5H7.53v-.031H7.5V7.53h.031V7.5h.938v.031H8.5v.938h-.031zm1.875.031h-.938v-1h.938v1zm1.875 0h-.938v-1h.938v1zm1.875 0h-.938v-1h.938v1zm1.406
+                            0h-.469v-.031H15V7.53h.031V7.5h.469v.031h.5v.938h-.5V8.5zM0 10.344v-.938h1v.938H0zm7.5 0v-.938h1v.938h-1zm8.5-.938v.938h-1v-.938h1zM0 12.22v-.938h1v.938H0zm7.5
+                            0v-.938h1v.938h-1zm8.5-.938v.938h-1v-.938h1zM0 14.094v-.938h1v.938H0zm7.5 0v-.938h1v.938h-1zm8.5-.938v.938h-1v-.938h1zM.969 16H0v-.969h.5V15h.469v.031H1v.469H.969v.5zm1.875
+                            0h-.938v-1h.938v1zm1.875 0H3.78v-1h.938v1zm1.875 0h-.938v-1h.938v1zm.937 0v-.5H7.5v-.469h.031V15h.938v.031H8.5v.469h-.031v.5H7.53zm2.813 0h-.938v-1h.938v1zm1.875 0h-.938v-1h.938v1zm1.875
+                            0h-.938v-1h.938v1zm.937 0v-.5H15v-.469h.031V15h.469v.031h.5V16h-.969z" id="mainIconPathAttribute">
+                            </path>
+                        </svg>
+
+                        <svg id="showBorderSvg" viewBox="0 0 16 16" style="display: none;">
+                            <path d="M0 0h16v16H0V0zm1 1v6.5h6.5V1H1zm7.5 0v6.5H15V1H8.5zM15 8.5H8.5V15H15V8.5zM7.5 15V8.5H1V15h6.5z" id="mainIconPathAttribute"/> </svg>
+                    </button>
+                    
+                    <button class="buttons svgButtons buttonsRow1" onclick="toggleNumbers()">
+                        <svg id="hideNumberSvg" viewBox="0 0 256 256">
+                            <rect width="380.221" height="381.956" fill="none" x="-63.329" y="-35.778" style=""/>
+                            <rect width="220.948" height="203.71" fill="none" x="8.909" y="57.166" style=""/>
+                            <polyline points="91.35 69.146 129.737 24.908 129.737 222.058" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14" style=""/>
+                            <polyline points="182.805 224.062 77.751 224.577" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14" style=""/>
+                            <path d="M 127.586 121.195 L 245.041 4.374 L 253.11 12.396 L 135.655 129.218 L 251.806 246.036 L 245.041 254.062 L 127.586 137.24 L 10.128 254.062 L 2.06 246.036 L 119.515 129.218 L 2.06 12.396 L 10.128 4.374 L 127.586 121.195 Z" style=""/>
+                        </svg>
+
+                        <svg id="showNumberSvg" viewBox="0 0 256 256" style="display: none;">
+                            <rect width="380.221" height="381.956" fill="none" x="-63.329" y="-35.778" style=""/>
+                            <rect width="220.948" height="203.71" fill="none" x="8.909" y="57.166" style=""/>
+                            <polyline points="91.35 69.146 129.737 24.908 129.737 222.058" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14" style=""/>
+                            <polyline points="182.805 224.062 77.751 224.577" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="14" style=""/>
+                        </svg>
+                    </button>
                     <button id="flipHorizontally" class="buttons svgButtons buttonsRow2" onclick="flipPuzzleHorizontally()">
                         <svg viewbox="0 0 48 48">
                             <path d="M24 6V42" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="mainIconPathAttribute" fill="#000000"></path>
@@ -95,8 +126,8 @@
 
             <div>
                 <div id="customImageInput" class="inputs" style="align-items: center; justify-content: center; flex-wrap: wrap; flex-basis: 100%;">
-                    <div class="editTitle">Customize Image:</div>
-                    <div>
+                    <div class="editTitle" style="margin-top: 1vh;">Customize Image:</div>
+                    <div class="centered">
                         <label for="imageInputURL">URL:</label>
                         <input type="url" id="imageInputURL" name="imageInputURL" class="imageInputURL" onchange="handleImageURL()"></input>
                         <input type="file" id="imageUpload" style="display: none;" onchange="handleImageUpload()"></input>
